--- a/libraries/libraries/static/scss/components/_button.scss
+++ b/libraries/libraries/static/scss/components/_button.scss
@@ -1,14 +1,14 @@
 .button {
-    border: 2px solid black;
+    border: 2px solid $black;
     border-radius: 100px;
     display: inline-block;
-    position: relative;
-    padding: 7px 17px;
-    text-align: center;
-    text-decoration: none;
     font-family: $font-family-sans-serif;
     font-weight: bold;
     margin-left: -10px;
+    padding: 7px 17px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
 
     &:hover {
         border-color: rgb(35, 35, 35);
