--- a/libraries/libraries/static/scss/components/collections/_collections-nav-item.scss
+++ b/libraries/libraries/static/scss/components/collections/_collections-nav-item.scss
@@ -3,25 +3,25 @@
 // ========================================
 
 .collections-nav-item {
-  display: block;
-  margin: 0 0 23px;
+    display: block;
+    margin: 0 0 23px;
 
-  @include respond($break-medium) {
-    margin: 0;
+    @include respond($break-medium) {
+        margin: 0;
 
-    &.collections-nav-item--is-active,
-    &:hover {
-      // vary color by section
-      .collections-nav-item__link {
-        border-left-color: $purple;
-        padding-left: 15px;
-      }
+        &.collections-nav-item--is-active,
+        &:hover {
+            // vary color by section
+            .collections-nav-item__link {
+                border-left-color: $purple;
+                padding-left: 15px;
+            }
 
-      .collections-nav-item__text {
-        border-bottom: 0;
-      }
+            .collections-nav-item__text {
+                border-bottom: 0;
+            }
+        }
     }
-  }
 }
 
 // some of the more complicated vary-color-by-section due to nesting
@@ -47,20 +47,20 @@
     }
 }
 
-  // vary color by section
-  .page--about-us .collections-nav-item__link {
+// vary color by section
+.page--about-us .collections-nav-item__link {
     border-bottom: 2px solid $green;
-  }
+}
 
-  .page--services .collections-nav-item__link {
+.page--services .collections-nav-item__link {
     border-bottom: 2px solid $blue;
-  }
+}
 
-  .page--collections .collections-nav-item__link {
+.page--collections .collections-nav-item__link {
     border-bottom: 2px solid $purple;
-  }
+}
 
-  .page .collections-nav-item__link {
+.page .collections-nav-item__link {
     color: inherit;
     font-family: $font-family-serif;
     font-size: 15px;
@@ -68,45 +68,39 @@
     text-decoration: none;
 
     @include respond($break-medium) {
-      border-bottom: 1px solid black(0.1);
-      border-left: 2px solid transparent;
-      display: block;
-      font-size: 12px;
-      line-height: 1.5em;
-      padding: 15px 15px 15px 5px;
-      transition: padding 0.3s ease,
-                  border-left 0.3s ease;
+        border-bottom: 1px solid black(.1);
+        border-left: 2px solid transparent;
+        display: block;
+        font-size: 12px;
+        line-height: 1.5em;
+        padding: 15px 15px 15px 5px;
+        transition: padding .3s ease,
+        border-left .3s ease;
     }
-  }
-
-.collections-nav-item {
-
 }
 
-
-
-  .collections-nav-item__link:hover {
-    opacity: 0.7;
+.collections-nav-item__link:hover {
+    opacity: .7;
 
     @include respond($break-medium) {
-      opacity: 1;
+        opacity: 1;
     }
-  }
+}
 
 .page--collections .collections-nav-item__text {
-  @include respond($break-medium) {
-    border-bottom: 1px solid $purple;
-  }
+    @include respond($break-medium) {
+        border-bottom: 1px solid $purple;
+    }
 }
 
 .page--about-us .collections-nav-item__text {
-  @include respond($break-medium) {
-    border-bottom: 1px solid $green;
-  }
+    @include respond($break-medium) {
+        border-bottom: 1px solid $green;
+    }
 }
 
 .page--services .collections-nav-item__text {
-  @include respond($break-medium) {
-    border-bottom: 1px solid $blue;
-  }
+    @include respond($break-medium) {
+        border-bottom: 1px solid $blue;
+    }
 }
