--- a/libraries/libraries/static/scss/components/header/_main-navigation.scss
+++ b/libraries/libraries/static/scss/components/header/_main-navigation.scss
@@ -4,120 +4,120 @@
 // ========================================
 
 .main-navigation {
-  background: $white;
-  display: none;
-  position: absolute;
-  top: $header-height-small;
-  width: 100%;
+    background: $white;
+    display: none;
+    position: absolute;
+    top: $header-height-small;
+    width: 100%;
 
-  @include respond($break-medium) {
-    display: flex;
-    float: right;
-    margin-right: 20px;
-    position: relative;
-    top: -4px; // border offset
-    width: auto;
-  }
+    @include respond($break-medium) {
+        display: flex;
+        float: right;
+        margin-right: 20px;
+        position: relative;
+        top: -4px; // border offset
+        width: auto;
+    }
 }
 
 .main-navigation--is-active {
-  display: block;
+    display: block;
 }
 
 // On the home page the search icon is
 // hidden so we can remove the right margin
 .page--home .main-navigation {
-  @include respond($break-medium) {
-    margin-right: 0;
-  }
+    @include respond($break-medium) {
+        margin-right: 0;
+    }
 }
 
-  .main-navigation__item {
-    border-bottom: 1px solid black(0.1);
+.main-navigation__item {
+    border-bottom: 1px solid black(.1);
     border-left: 3px solid transparent;
     display: block;
-    transition: border 0.3s ease;
+    transition: border .3s ease;
 
     @include respond(0, $break-medium) {
-      &:last-of-type {
-        border-bottom: 0;
-      }
+        &:last-of-type {
+            border-bottom: 0;
+        }
     }
 
     @include respond($break-medium) {
-      border-bottom: 3px solid transparent;
-      border-left: 0;
-      display: inline-block;
-      padding: 0 13px;
+        border-bottom: 3px solid transparent;
+        border-left: 0;
+        display: inline-block;
+        padding: 0 13px;
     }
-  }
+}
 
-  .main-navigation__item:hover {
+.main-navigation__item:hover {
     &:first-of-type {
-      border-left-color: $blue;
+        border-left-color: $blue;
     }
 
     &:nth-of-type(2) {
-      border-left-color: $purple;
+        border-left-color: $purple;
     }
 
     &:nth-of-type(3) {
-      border-left-color: $green;
+        border-left-color: $green;
     }
 
     // scss-lint:disable DeclarationOrder
     @include respond($break-medium) {
-      &:first-of-type {
-        border-bottom-color: $blue;
-      }
+        &:first-of-type {
+            border-bottom-color: $blue;
+        }
 
-      &:nth-of-type(2) {
-        border-bottom-color: $purple;
-      }
+        &:nth-of-type(2) {
+            border-bottom-color: $purple;
+        }
 
-      &:nth-of-type(3) {
-        border-bottom-color: $green;
-      }
+        &:nth-of-type(3) {
+            border-bottom-color: $green;
+        }
     }
     // scss-lint:enable DeclerationOrder
-  }
+}
 
-  .page--services .main-navigation__item:first-of-type {
+.page--services .main-navigation__item:first-of-type {
     border-left-color: $blue;
 
     @include respond($break-medium) {
-      border-bottom-color: $blue;
+        border-bottom-color: $blue;
     }
-  }
+}
 
-  .page--collections .main-navigation__item:nth-of-type(2) {
+.page--collections .main-navigation__item:nth-of-type(2) {
     border-left-color: $purple;
 
     @include respond($break-medium) {
-      border-bottom-color: $purple;
+        border-bottom-color: $purple;
     }
-  }
+}
 
-  .page--about-us .main-navigation__item:nth-of-type(3) {
+.page--about-us .main-navigation__item:nth-of-type(3) {
     border-left-color: $green;
 
     @include respond($break-medium) {
-      border-bottom-color: $green;
+        border-bottom-color: $green;
     }
-  }
+}
 
-    .main-navigation__link {
-      color: $black;
-      display: block;
-      font-size: 18px;
-      font-weight: 700;
-      padding: 20px 20px 20px 16px; // border offset
-      text-decoration: none;
+.main-navigation__link {
+    color: $black;
+    display: block;
+    font-size: 18px;
+    font-weight: 700;
+    padding: 20px 20px 20px 16px; // border offset
+    text-decoration: none;
 
-      @include respond($break-medium) {
+    @include respond($break-medium) {
         font-size: 16px;
         height: $header-height-large;
         line-height: $header-height-large + 10;
         padding: 0;
-      }
     }
+}
