--- a/libraries/libraries/static/scss/components/home/_home-news-item.scss
+++ b/libraries/libraries/static/scss/components/home/_home-news-item.scss
@@ -3,130 +3,130 @@
 // ===================================
 
 .home-news-item {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 0 0 24px;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 0 24px;
 
-  @include respond($break-small) {
-    flex-wrap: nowrap;
-  }
+    @include respond($break-small) {
+        flex-wrap: nowrap;
+    }
 }
 
 .home-news-item--instagram {
-  flex: 1 0 100%;
-  flex-wrap: wrap;
+    flex: 1 0 100%;
+    flex-wrap: wrap;
 
-  @include respond($break-medium) {
-    flex: 1 0 30%;
-    padding: 0 0 0 10px;
-  }
+    @include respond($break-medium) {
+        flex: 1 0 30%;
+        padding: 0 0 0 10px;
+    }
 
-  @include respond($break-large) {
-    padding: 0 0 0 30px;
-  }
+    @include respond($break-large) {
+        padding: 0 0 0 30px;
+    }
 }
 
-  .home-news-item__image-wrapper {
+.home-news-item__image-wrapper {
     background-size: cover;
     flex: 1 0 100%;
     margin: 0 0 10px;
 
     @include respond($break-small) {
-      flex: 1 0 30%;
+        flex: 1 0 30%;
     }
 
     @include respond($break-large) {
-      flex: 1 0 45%;
+        flex: 1 0 45%;
     }
-  }
+}
 
-  .home-news-item__image-wrapper--instagram {
+.home-news-item__image-wrapper--instagram {
     @include respond($break-medium) {
-      flex: 1 0 100%;
+        flex: 1 0 100%;
     }
-  }
+}
 
-    .home-news-item__image {
-      display: block;
-      height: auto;
-      width: 100%;
-    }
+.home-news-item__image {
+    display: block;
+    height: auto;
+    width: 100%;
+}
 
-  .home-news-item__content {
+.home-news-item__content {
     flex: 1 0 100%;
 
     @include respond($break-small) {
-      flex: 1 0 70%;
-      padding: 0 10px;
+        flex: 1 0 70%;
+        padding: 0 10px;
     }
 
     @include respond($break-medium) {
-      padding: 0 20px;
+        padding: 0 20px;
     }
 
     @include respond($break-large) {
-      flex: 1 0 55%;
+        flex: 1 0 55%;
     }
-  }
+}
 
-  .home-news-item__content--instagram {
+.home-news-item__content--instagram {
     @include respond($break-medium) {
-      flex: 1 0 100%;
-      padding: 0;
+        flex: 1 0 100%;
+        padding: 0;
     }
-  }
+}
 
-    .home-news-item__date {
-      display: none;
-      font-family: $font-family-serif;
-      font-size: 12px;
-      margin: 0 0 6px;
+.home-news-item__date {
+    display: none;
+    font-family: $font-family-serif;
+    font-size: 12px;
+    margin: 0 0 6px;
 
-      @include respond($break-small) {
+    @include respond($break-small) {
         display: block;
-      }
     }
+}
 
-    .home-news-item__title {
-      font-size: 16px;
-      font-weight: 700;
-      line-height: 1.4em;
-      margin: 0 0 7px;
+.home-news-item__title {
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1.4em;
+    margin: 0 0 7px;
 
-      @include respond($break-medium) {
+    @include respond($break-medium) {
         font-size: 18px;
         margin: 0 0 12px;
-      }
     }
+}
 
-      .home-news-item__link {
-        border-bottom: 2px solid $turquoise;
-        color: inherit;
-        text-decoration: none;
-      }
+.home-news-item__link {
+    border-bottom: 2px solid $turquoise;
+    color: inherit;
+    text-decoration: none;
+}
 
-      .home-news-item__link:hover {
-        opacity: 0.7;
-      }
+.home-news-item__link:hover {
+    opacity: .7;
+}
 
-    .home-news-item__text {
-      font-family: $font-family-serif;
-      font-size: 13px;
-      // fixes layout bugs when text includes long words e.g. URLs
-      hyphens: auto;
-      line-height: 1.4em;
+.home-news-item__text {
+    font-family: $font-family-serif;
+    font-size: 13px;
+    // fixes layout bugs when text includes long words e.g. URLs
+    hyphens: auto;
+    line-height: 1.4em;
 
-      @include respond($break-medium) {
+    @include respond($break-medium) {
         font-size: 14px;
-      }
     }
 
-    .home-news-item__text em {
-      cursor: pointer;
-      font-style: normal;
-      text-decoration: underline;
-    }
+    em {
+        cursor: pointer;
+        font-style: normal;
+        text-decoration: underline;
 
-    .home-news-item__text em:hover {
-      opacity: 0.7;
+        &:hover {
+            opacity: .7;
+        }
     }
+}
