--- a/libraries/libraries/static/scss/components/exhibits/_gallery.scss
+++ b/libraries/libraries/static/scss/components/exhibits/_gallery.scss
@@ -9,6 +9,40 @@ img {
 .gallery {
     border-top: 1px solid $black;
     margin-bottom: 2em;
+
+    &__fallback-image {
+        max-width: 600px;
+    }
+
+    &__play-button {
+        left: 50%;
+        position: absolute;
+        top: 50%;
+        z-index: 63;
+        opacity: 0;
+        transition: opacity .3s ease-in;
+        transform: translate(-50%, -50%);
+
+        .gallery--work:hover & {
+            opacity: 1;
+        }
+
+        // YouTube "play" button
+        &--ytp {
+            height: 48px;
+            width: 68px;
+        }
+
+        // Audio "play" button
+        &--audio {
+            background: rgba(black, 0.7);
+            border-radius: 50%;
+            fill: white;
+            height: 56px;
+            width: 56px;
+            padding: 13px;
+        }
+    }
 }
 
 .gallery--works {
@@ -84,36 +118,6 @@ img {
 .gallery--work__title {
     font-size: 14px;
     font-weight: 700;
-}
-
-.gallery__play-button {
-    left: 50%;
-    position: absolute;
-    top: 50%;
-    z-index: 63;
-    opacity: 0;
-    transition: opacity .3s ease-in;
-    transform: translate(-50%, -50%);
-
-    .gallery--work:hover & {
-        opacity: 1;
-    }
-
-    // YouTube "play" button
-    &--ytp {
-        height: 48px;
-        width: 68px;
-    }
-
-    // Audio "play" button
-    &--audio {
-        background: rgba(black, 0.7);
-        border-radius: 50%;
-        fill: white;
-        height: 66px;
-        width: 66px;
-        padding: 10px;
-    }
 }
 
 // center <audio> element in opened gallery
