--- a/libraries/libraries/static/scss/components/exhibits/_details.scss
+++ b/libraries/libraries/static/scss/components/exhibits/_details.scss
@@ -43,7 +43,7 @@
 
 .description {
     border-top: 1px solid $black;
-    padding-top: 2em;
+    padding: 2em 1em 0 0;
 
     @include respond($break-medium) {
         border: 0;
