exhib - fix line height, make consistent & larger, ref #72

--- a/libraries/libraries/static/scss/components/exhibits/_page.scss
+++ b/libraries/libraries/static/scss/components/exhibits/_page.scss
@@ -12,6 +12,7 @@
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
     // scss-lint:enable PropertySpelling
+    line-height: 1.5;
     min-width: 360px;
     text-rendering: optimizeLegibility;
     // scss-lint:disable DuplicateProperty
