--- a/libraries/libraries/static/scss/components/exhibits/_gallery.scss
+++ b/libraries/libraries/static/scss/components/exhibits/_gallery.scss
@@ -37,7 +37,7 @@ img {
         &--audio {
             background: rgba(black, .7);
             border-radius: 50%;
-            fill: white;
+            fill: $white;
             height: 56px;
             padding: 13px;
             width: 56px;
@@ -85,7 +85,6 @@ img {
 
 .gallery--work__metadata {
     background: $white;
-    line-height: 1.45;
     overflow: hidden;
     padding: 1em 0 3em;
 
