css - add stencil font family

--- a/libraries/libraries/static/scss/fonts/_cca-fonts.scss
+++ b/libraries/libraries/static/scss/fonts/_cca-fonts.scss
@@ -19,3 +19,5 @@
         url('/static/fonts/lineto-brown-italic.woff') format('woff');
     font-style: italic;
 }
+
+// @TODO obtain files for Le Corbusier, our brand "stencil" font
