exhib - variable columns/gutter widths in gallery
ref #72
note that this starts to introduce a choice of main body
font but right now that choice doesn't actually affect
anything

--- a/libraries/exhibitions/templates/components/artwork.html
+++ b/libraries/exhibitions/templates/components/artwork.html
@@ -1,37 +1,37 @@
 {% load wagtailcore_tags wagtailimages_tags %}
 
 {% comment %}
-TODO: conditions for different work types (image, audio, video, embed)
+Note that "data-width" attribute on galler works is for lightGallery while the explicitly-declared widths in the "style" attribute are to help the Masonry layout handle a variable number of columns.
 {% endcomment %}
 
 {% if work.type == 'image' %}
 {% image work.image original as full_image %}
-<div class="gallery--work js-gallery--work" data-src="{{ full_image.url }}"
-    data-width="{{ full_image.width }}" data-sub-html=".js-caption">
+<div class="gallery--work js-gallery--work"
+    data-src="{{ full_image.url }}" data-width="{{ full_image.width }}" data-sub-html=".js-caption"
+    style="width:{{ page.column_width }}px;">
     <div class="gallery--work__image">
-        {% image work.image max-600x600 %}
+        {% image work.image max-630x630 %}
     </div>
 
 {% elif work.type == 'html' %}
 {% include 'components/embed.html' %}
 
-{% comment %} these types not supported yet {% endcomment %}
-
 {% elif work.type == 'video' %}
-<div class="gallery--work js-gallery--work" data-sub-html=".js-caption"
-    data-html="#js-{{work.title|slugify}}">
+<div class="gallery--work js-gallery--work"
+    data-sub-html=".js-caption" data-html="#js-{{work.title|slugify}}"
+    style="width:{{ page.column_width }}px;">
     <div class="gallery--work__video">
     {% if work.image %}
         {% include 'components/ytp-btn.html' %}
-        {% image work.image max-600x600 %}
+        {% image work.image max-630x630 %}
     {% else %}
         {% include 'components/ytp-btn.html' %}
         <img src="..." alt="video icon" />
     {% endif %}
     </div>
-    <div class="gallery--work__video media" id="js-{{work.title|slugify}}">
+    <div class="gallery--work__video media" id="js-{{ work.title|slugify }}">
         <video class="lg-video-object lg-html5" controls preload="none"
-            poster="{{work.image.file.url}}">
+            poster="{{ work.image.file.url }}">
             <source src="{{ work.media.file.url }}" type="video/mp4">
              Your browser does not support HTML5 video.
         </video>
@@ -41,6 +41,7 @@ TODO: conditions for different work types (image, audio, video, embed)
     {% include 'components/audio.html' %}
 {% endif %}
 
+{% comment %} all types share the same metadata structure {% endcomment %}
     <div class="gallery--work__metadata js-caption">
         {% comment %} title is required but creator is not {% endcomment %}
         <div class="gallery--work__responsibility">
