--- a/libraries/exhibitions/templates/components/embed.html
+++ b/libraries/exhibitions/templates/components/embed.html
@@ -2,11 +2,11 @@
 {% if work.embed_code != '' %}
 <div class="gallery--work js-gallery--work" data-iframe="true"
     data-src="{{ work.embed_code }}?modestbranding=1&rel=0&showinfo=0&controls=0"
-    data-sub-html=".js-caption">
+    data-sub-html=".js-caption" s3yle="width:{{page.column_width}}px;">
     <div class="gallery--work__html">
         {% if work.image %}
             {% include 'components/ytp-btn.html' %}
-            {% image work.image max-600x600 %}
+            {% image work.image max-630x630 %}
 
         {% comment %}
         for YouTube we can find a thumbnail, not possible for Vimeo without an API call
