exhib - choice of main font, ref #72

--- a/libraries/exhibitions/templates/exhibitions/exhibit_page.html
+++ b/libraries/exhibitions/templates/exhibitions/exhibit_page.html
@@ -11,7 +11,7 @@
     {% include 'components/foursquare.html' %}
 {% endif %}
 
-<div class="wrapper">
+<div class="wrapper font--{{ page.main_body_font|slugify }}">
 
     <div class="wrapper--details">
 
