--- a/libraries/libraries/static/scss/components/exhibits/_page.scss
+++ b/libraries/libraries/static/scss/components/exhibits/_page.scss
@@ -4,6 +4,7 @@
 // ===================================
 .page {
     background: $white;
+    // default to serif (Merriweather/The Serif) font
     font-family: $font-family-serif;
     // non-standard, autoprefixer can't handle this property because the values
     // differ with each implementation (W3C, Firefox, Chrome)
@@ -18,6 +19,19 @@
     // scss-lint:disable DuplicateProperty
     text-rendering: geometricPrecision;
     // scss-lint:enable DuplicateProperty
+
+    // override font based on the value of main_body_font
+    .font--monospace {
+        font-family: $font-family-monospace;
+    }
+
+    .font--sans-serif {
+        font-family: $font-family-sans-serif;
+    }
+
+    .font--stencil {
+        font-family: $font-family-stencil;
+    }
 }
 
 .epilogue {
