--- a/libraries/libraries/static/scss/fonts/_google-fonts.scss
+++ b/libraries/libraries/static/scss/fonts/_google-fonts.scss
@@ -1,4 +1,7 @@
 // NOTE: these are the backup open source fonts that Torchbox used when
 // building out our templates but not the official CCA brand fonts.
-// Formerly had "|Raleway:400,700" on the end, too
+// Merriweather is backup for The Serif
+// Raleway is backup for Brown
+// Stardos Stencil is backup for Le Corbusier
 @import url('https://fonts.googleapis.com/css?family=Merriweather:300,400,700');
+@import url('https://fonts.googleapis.com/css?family=Stardos Stencil:300,400,700');
